--- a/BOJ1005_ACM_Craft/Front/style.css
+++ b/BOJ1005_ACM_Craft/Front/style.css
@@ -42,3 +42,10 @@ button {
     border-radius: 5px;
     font-weight: bold;
 }
+
+.node {
+    background-color: black;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
