--- a/BOJ1005_ACM_Craft/Front/style.css
+++ b/BOJ1005_ACM_Craft/Front/style.css
@@ -7,7 +7,7 @@
 .frames {
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 1000px;
     margin: auto;
     margin-top: 70px;
 }
@@ -18,6 +18,7 @@
     border-radius: 10px;
     width: 100%;
     height: 500px;
+    position:relative;
 }
 
 .btns {
@@ -44,8 +45,14 @@ button {
 }
 
 .node {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
+    color:white;
+    font-weight: bold;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    position:absolute;
 }
