--- a/BOJ1005_ACM_Craft/Front/style.css
+++ b/BOJ1005_ACM_Craft/Front/style.css
@@ -45,11 +45,12 @@ button {
 }
 
 .node {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(102, 172, 230);
     color:white;
     font-weight: bold;
     width: 50px;
     height: 50px;
+    border: 1px solid black;
     border-radius: 50%;
     justify-content: center;
     display: flex;
