--- a/BOJ1005_ACM_Craft/Front/style.css
+++ b/BOJ1005_ACM_Craft/Front/style.css
@@ -45,15 +45,20 @@ button {
 }
 
 .node {
-    background-color: rgb(102, 172, 230);
-    color:white;
+    background-color: rgb(240, 241, 165);
+    color:rgb(107, 107, 107);
     font-weight: bold;
     width: 50px;
     height: 50px;
-    border: 1px solid black;
+    border: 1px solid rgb(172, 172, 172);
     border-radius: 50%;
     justify-content: center;
     display: flex;
     align-items: center;
     position:absolute;
+    cursor: default;
+}
+
+.active {
+    background-color: black;
 }
